--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/debug.css" />
+    <!-- <link rel="stylesheet" href="css/debug.css" /> -->
     <link rel="stylesheet" href="css/hero-style.css" />
     <title>Stream TV and Movies Live and Online | Hulu</title>
     <style>
