--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/debug.css" /> -->
+    <!--<link rel="stylesheet" href="css/debug.css" />-->
     <link rel="stylesheet" href="css/hero-style.css" />
     <title>Stream TV and Movies Live and Online | Hulu</title>
     <style>
@@ -103,7 +103,7 @@
         </nav>
       </div>-->
     </section>
-    <!--Section -->
+    <!--Section 2 -->
     <section class="section has-background-black">
       <div class="container has-text-centered">
         <h1 class="title is-6 is-size-7-mobile has-text-success">
@@ -118,7 +118,7 @@
         </p>
       </div>
       <!-- GRID-->
-      <div class="container mt-5">
+      <div class="container mt-6 mx-0">
         <div class="tile is-ancestor">
           <div class="tile is-parent">
             <figure class="image">
@@ -142,6 +142,41 @@
           </div>
         </div>
       </div>
+    </section>
+    <!-- Section 3 -->
+    <section class="section has-background-black is-medium">
+      <div class="container has-text-centered">
+        <h1 class="title is-6 is-size-7-mobile has-text-success">
+          HULU + LIVE TV, NOW WITH DISNEY+ AND ESPN+
+        </h1>
+        <h1 class="title is-1 is-size-3-mobile has-text-white pb-3">
+          Live TV Makes It Better
+        </h1>
+        <p class="subtitle is-6 has-text-white mx-6">
+          Make the switch from cable. Get 75+ top channels on Hulu with your
+          favorite live sports, news, and events - plus the entire Hulu
+          streaming library. With Unlimited DVR, store Live TV recordings for up
+          to nine months and fast-forward through your DVR content. Access
+          endless entertainment with Disney+ and live sports with ESPN+. All
+          three for a new price of $69.99/month.
+        </p>
+        <p
+          class="subtitle is-size-7 has-text-grey has-text-weight-light is-family-sans-serif"
+        >
+          18+ only. Regional restrictions, blackouts and
+          <a class="is-underlined has-text-grey">Live TV terms apply</a>. Access
+          content from each service separately and access ESPN+ content via
+          Hulu. Location data required to watch certain content. Offer valid for
+          eligible subscribers only. Unlimited DVR recording is not available
+          for on-demand shows.
+        </p>
+        <p class="subtitle is-6 has-text-weight-medium is-family-sans-serif">
+          <a class="is-underlined has-text-white"
+            >VIEW CHANNELS IN YOUR AREA →</a
+          >
+        </p>
+      </div>
+      <!--  -->
     </section>
   </body>
 </html>
