--- a/index.html
+++ b/index.html
@@ -178,5 +178,153 @@
       </div>
       <!--  -->
     </section>
+    <!-- Footer -->
+    <section class="section">
+      <footer class="footer">
+        <div class="container">
+          <div class="columns is-hidden-mobile">
+            <div class="column">
+              <h4 class="is-size-6 title">About Us</h4>
+              <ul>
+                <li class="mb-5"><a class="has-text-grey">Company</a></li>
+                <li class="mb-5"><a class="has-text-grey">Our Coffee</a></li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Stories and News</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Starbucks Archive</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Investor Relations</a>
+                </li>
+                <li class="mb-3">
+                  <a class="has-text-grey">Customer Service</a>
+                </li>
+              </ul>
+            </div>
+            <div class="column">
+              <h4 class="is-size-6 title">Careers</h4>
+              <ul>
+                <li class="mb-5">
+                  <a class="has-text-grey">Culture and values</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Inclusion, Diversity, and Equity</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">College Achievement Plan</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Alumni Community</a>
+                </li>
+                <li class="mb-5"><a class="has-text-grey">U.S. Careers</a></li>
+                <li class="mb-3">
+                  <a class="has-text-grey">International Careers</a>
+                </li>
+              </ul>
+            </div>
+            <div class="column">
+              <h4 class="is-size-6 title">Social Impact</h4>
+              <ul>
+                <li class="mb-5"><a class="has-text-grey">People</a></li>
+                <li class="mb-5"><a class="has-text-grey">Planet</a></li>
+                <li class="mb-5">
+                  <a class="has-text-grey"
+                    >Environmental and Social Impact Reporting</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="column">
+              <h4 class="is-size-6 title">For Business Partners</h4>
+              <ul>
+                <li class="mb-5">
+                  <a class="has-text-grey">Landlord Support Center</a>
+                </li>
+                <li class="mb-5"><a class="has-text-grey">Suppliers</a></li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Corporate Gift Card Sales</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Office and Foodservice</a>
+                </li>
+              </ul>
+            </div>
+            <div class="column">
+              <h4 class="is-size-6 title">Order and Pickup</h4>
+              <ul>
+                <li class="mb-5">
+                  <a class="has-text-grey">Our on the App</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Our on the Web</a>
+                </li>
+                <li class="mb-5"><a class="has-text-grey">Delivery</a></li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Order and Pickup Option</a>
+                </li>
+                <li class="mb-5">
+                  <a class="has-text-grey">Explore and Find Coffee for Home</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <ul class="mb-5">
+          <li class="is-inline">
+            <span class="pr-2 has-text-black"
+              ><i class="fa-brands fa-spotify fa-2xl"></i
+            ></span>
+          </li>
+          <li class="is-inline">
+            <span class="p-2 has-text-black"
+              ><i class="fa-brands fa-facebook fa-2xl"></i
+            ></span>
+          </li>
+          <li class="is-inline">
+            <span class="p-2 has-text-black"
+              ><i class="fa-brands fa-pinterest fa-2xl"></i
+            ></span>
+          </li>
+          <li class="is-inline">
+            <span class="p-2 has-text-black"
+              ><i class="fa-brands fa-instagram fa-2xl"></i
+            ></span>
+          </li>
+          <li class="is-inline">
+            <span class="p-2 has-text-black"
+              ><i class="fa-brands fa-youtube fa-2xl"></i
+            ></span>
+          </li>
+          <li class="is-inline">
+            <span class="p-2 has-text-black"
+              ><i class="fa-brands fa-twitter fa-2xl"></i
+            ></span>
+          </li>
+        </ul>
+        <ul>
+          <li class="is-inline">
+            <a class="has-text-black">Privacy Policy</a>
+          </li>
+          <li class="is-inline">
+            <span class="px-2">|</span
+            ><a class="has-text-black">Terms of Use</a>
+          </li>
+          <li class="is-inline">
+            <span class="px-2">|</span
+            ><a class="has-text-black">CA Supply Chain Act</a>
+          </li>
+          <li class="is-inline">
+            <span class="px-2">|</span
+            ><a class="has-text-black">Cookie Preferences</a>
+          </li>
+        </ul>
+        <p class="has-text-dark is-size-7 py-3">
+          © 2022 Hulu, LLC. All rights reserved.
+        </p>
+      </footer>
+    </section>
+    <script src="js/script.js"></script>
   </body>
 </html>
