--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         background: black url(assets/images/banner.jpg) no-repeat center center /
           cover;
       }
+      hr {
+        border: 1px solid lightgray;
+        border-radius: 0px;
+      }
     </style>
   </head>
   <body>
@@ -152,7 +156,8 @@
         <h1 class="title is-1 is-size-3-mobile has-text-white pb-3">
           Live TV Makes It Better
         </h1>
-        <p class="subtitle is-6 has-text-white mx-6">
+
+        <p class="subtitle is-size-6 has-text-white ">
           Make the switch from cable. Get 75+ top channels on Hulu with your
           favorite live sports, news, and events - plus the entire Hulu
           streaming library. With Unlimited DVR, store Live TV recordings for up
@@ -160,6 +165,7 @@
           endless entertainment with Disney+ and live sports with ESPN+. All
           three for a new price of $69.99/month.
         </p>
+
         <p
           class="subtitle is-size-7 has-text-grey has-text-weight-light is-family-sans-serif"
         >
@@ -179,145 +185,193 @@
       <!--  -->
     </section>
     <!-- Footer -->
-    <section class="section">
-      <footer class="footer">
+    <section class="section has-background-light">
+      <footer class="footer has-background-light">
         <div class="container">
           <div class="columns is-hidden-mobile">
             <div class="column">
-              <h4 class="is-size-6 title">About Us</h4>
+              <h4 class="is-size-6 title">BROWSE</h4>
               <ul>
-                <li class="mb-5"><a class="has-text-grey">Company</a></li>
-                <li class="mb-5"><a class="has-text-grey">Our Coffee</a></li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Stories and News</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Streaming library</a
+                  >
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Starbucks Archive</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Live TV</a>
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Investor Relations</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Live News</a>
                 </li>
-                <li class="mb-3">
-                  <a class="has-text-grey">Customer Service</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Live Sports</a>
                 </li>
               </ul>
             </div>
             <div class="column">
-              <h4 class="is-size-6 title">Careers</h4>
+              <h4 class="is-size-6 title">&nbsp;</h4>
               <ul>
-                <li class="mb-5">
-                  <a class="has-text-grey">Culture and values</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">TV Shows</a>
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Inclusion, Diversity, and Equity</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Movies</a>
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">College Achievement Plan</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Originals</a>
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Alumni Community</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Networks</a>
                 </li>
-                <li class="mb-5"><a class="has-text-grey">U.S. Careers</a></li>
-                <li class="mb-3">
-                  <a class="has-text-grey">International Careers</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Kids</a>
+                </li>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">FX</a>
                 </li>
               </ul>
             </div>
             <div class="column">
-              <h4 class="is-size-6 title">Social Impact</h4>
+              <h4 class="is-size-6 title">&nbsp;</h4>
               <ul>
-                <li class="mb-5"><a class="has-text-grey">People</a></li>
-                <li class="mb-5"><a class="has-text-grey">Planet</a></li>
-                <li class="mb-5">
-                  <a class="has-text-grey"
-                    >Environmental and Social Impact Reporting</a
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >HBO Max<sup class="is-size-7 has-text-weight-light"
+                      >TM</sup
+                    ></a
+                  >
+                </li>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Cinemax</a>
+                </li>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Showtime</a>
+                </li>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">STARZ</a>
+                </li>
+              </ul>
+            </div>
+            <div class="column">
+              <h4 class="is-size-6 title">&nbsp;</h4>
+              <ul>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Hulu, Disney, and <br />ESPN</a
+                  >
+                </li>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">
+                    Hulu (No Ads), <br />Disney+, and <br />ESPN+</a
+                  >
+                </li>
+
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Student Discount</a
                   >
                 </li>
               </ul>
             </div>
             <div class="column">
-              <h4 class="is-size-6 title">For Business Partners</h4>
+              <h4 class="is-size-6 title">Help</h4>
               <ul>
-                <li class="mb-5">
-                  <a class="has-text-grey">Landlord Support Center</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Account and Billing</a
+                  >
                 </li>
-                <li class="mb-5"><a class="has-text-grey">Suppliers</a></li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Corporate Gift Card Sales</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Plans and Pricing</a
+                  >
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Office and Foodservice</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Supported Devices</a
+                  >
+                </li>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light"
+                    >Accessibility</a
+                  >
                 </li>
               </ul>
             </div>
             <div class="column">
-              <h4 class="is-size-6 title">Order and Pickup</h4>
+              <h4 class="is-size-6 title">About Us</h4>
               <ul>
-                <li class="mb-5">
-                  <a class="has-text-grey">Our on the App</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Shop Hulu</a>
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Our on the Web</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Press</a>
                 </li>
-                <li class="mb-5"><a class="has-text-grey">Delivery</a></li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Order and Pickup Option</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Jobs</a>
                 </li>
-                <li class="mb-5">
-                  <a class="has-text-grey">Explore and Find Coffee for Home</a>
+                <li class="mb-2">
+                  <a class="has-text-grey has-text-weight-light">Contact</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
+
         <hr />
-        <ul class="mb-5">
+
+        <ul class="mb-5 pt-5">
           <li class="is-inline">
-            <span class="pr-2 has-text-black"
-              ><i class="fa-brands fa-spotify fa-2xl"></i
+            <span class="pr-2 has-text-grey"
+              ><i class="fa-brands fa-facebook-f fa-lg" aria-hidden="true"></i
             ></span>
           </li>
           <li class="is-inline">
-            <span class="p-2 has-text-black"
-              ><i class="fa-brands fa-facebook fa-2xl"></i
+            <span class="p-2 has-text-grey"
+              ><i class="fa-brands fa-twitter fa-lg" aria-hidden="true"></i
             ></span>
           </li>
           <li class="is-inline">
-            <span class="p-2 has-text-black"
-              ><i class="fa-brands fa-pinterest fa-2xl"></i
+            <span class="p-2 has-text-grey"
+              ><i class="fa-brands fa-youtube fa-lg" aria-hidden="true"></i
             ></span>
           </li>
+
           <li class="is-inline">
-            <span class="p-2 has-text-black"
-              ><i class="fa-brands fa-instagram fa-2xl"></i
-            ></span>
-          </li>
-          <li class="is-inline">
-            <span class="p-2 has-text-black"
-              ><i class="fa-brands fa-youtube fa-2xl"></i
-            ></span>
-          </li>
-          <li class="is-inline">
-            <span class="p-2 has-text-black"
-              ><i class="fa-brands fa-twitter fa-2xl"></i
+            <span class="p-2 has-text-grey"
+              ><i class="fa-brands fa-instagram fa-lg" aria-hidden="true"></i
             ></span>
           </li>
         </ul>
         <ul>
           <li class="is-inline">
-            <a class="has-text-black">Privacy Policy</a>
+            <a class="has-text-black has-text-weight-light is-size-7"
+              >About Ads</a
+            >
           </li>
           <li class="is-inline">
-            <span class="px-2">|</span
-            ><a class="has-text-black">Terms of Use</a>
+            <span class="px-2">&nbsp;</span
+            ><a class="has-text-black has-text-weight-light is-size-7"
+              >Terms of Use</a
+            >
           </li>
           <li class="is-inline">
-            <span class="px-2">|</span
-            ><a class="has-text-black">CA Supply Chain Act</a>
+            <span class="px-2">&nbsp;</span
+            ><a class="has-text-black has-text-weight-light is-size-7"
+              >Privacy Policy</a
+            >
           </li>
           <li class="is-inline">
-            <span class="px-2">|</span
-            ><a class="has-text-black">Cookie Preferences</a>
+            <span class="px-2">&nbsp;</span
+            ><a class="has-text-black has-text-weight-light is-size-7"
+              >Do Not Sell My Personal Information</a
+            >
+          </li>
+          <li class="is-inline">
+            <span class="px-2">&nbsp;</span
+            ><a class="has-text-black has-text-weight-light is-size-7"
+              >Your California Privacy Rights</a
+            >
           </li>
         </ul>
         <p class="has-text-dark is-size-7 py-3">
