--- a/index.html
+++ b/index.html
@@ -74,14 +74,21 @@
             Get endless entertainment, live sports, and the shows and movies you
             love.
           </p>-->
-          <p class="subtitle has-text-white">
-            Get endless entertainment, live sports, and the shows and movies you
-            love.
+          <figure class="image">
+            <img src="assets/images/bundles-dark.svg" style="width: 60%; margin-left: 20%;">
+          </figure>
+          <p class="subtitle has-text-white has-text-weight-medium is-size-4 is-size-6-mobile">
+            Get endless entertainment, live sports, and the shows and
+            <br />movies you love.
           </p>
           <div class="bundle-button">
             <a
               class="button has-text-weight-medium is-size-5 is-medium is-uppercase has-text-black"
-              style="background-color: #1ce783; border: none; display: inline-block;"
+              style="
+                background-color: #1ce783;
+                border: none;
+                display: inline-block;
+              "
               >get the disney bundle</a
             >
           </div>
