--- a/index.html
+++ b/index.html
@@ -70,14 +70,21 @@
 
       <div class="hero-body">
         <div class="container has-text-centered">
-          <!-- <p class="title">
-            Get endless entertainment, live sports, and the shows and movies you
-            love.
-          </p>-->
+          <p
+            class="subtitle is-uppercase is-7 has-text-weight-medium"
+            style="color: #1ce783"
+          >
+            BUNDLE WITH ANY HULU PLAN & SAVE
+          </p>
           <figure class="image">
-            <img src="assets/images/bundles-dark.svg" style="width: 60%; margin-left: 20%;">
+            <img
+              src="assets/images/bundles-dark.svg"
+              style="width: 60%; margin-left: 20%"
+            />
           </figure>
-          <p class="subtitle has-text-white has-text-weight-medium is-size-4 is-size-6-mobile">
+          <p
+            class="subtitle has-text-white has-text-weight-medium is-size-4 is-size-6-mobile"
+          >
             Get endless entertainment, live sports, and the shows and
             <br />movies you love.
           </p>
@@ -91,6 +98,16 @@
               "
               >get the disney bundle</a
             >
+            <p
+              class="subtitle is-7 pt-3 has-text-white has-text-weight-light has-text-grey"
+            >
+              <a class="is-underlined has-text-grey">What's included?</a>
+              See <a class="is-underlined has-text-grey">Bundle terms.</a
+              ><br /><br />
+              <a class="is-underlined has-text-light is-size-6"
+                >Sign up for Hulu only</a
+              >
+            </p>
           </div>
         </div>
       </div>
